--- a/untitled6/startbootstrap-grayscale-gh-pages 4/index.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/index.html
@@ -50,7 +50,7 @@
   </nav>
 
   <!-- Header -->
-  <header class="masthead">
+  <header class="masthead" style="background:url(https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/matahari.jpg)>
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0">Foreign Therapists Group</h1>
