problem with padding at top of masthead. 150px added

--- a/untitled6/startbootstrap-grayscale-gh-pages 4/index.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/index.html
@@ -20,6 +20,11 @@
 
   <!-- Custom styles for this template -->
   <link href="css/grayscale.min.css" rel="stylesheet">
+  <style>
+  .masthead{
+      padding-top:150px;
+  }
+  </style>
 
 </head>
 
