--- a/untitled6/startbootstrap-grayscale-gh-pages 4/index.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/index.html
@@ -36,7 +36,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Foreign Therapists In The Czech Republic</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Foreign Therapists Group</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -63,7 +63,7 @@
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0">Foreign Therapists Group</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">A different therapy must be constructed for each patient because each has a unique story’ Irvin D. Yalom</h2> 
-        <a class="btn btn-primary js-scroll-trigger">Who Are We</a><a class="btn btn-primary js-scroll-trigger">Book An Appointment</a>
+        <a class="btn btn-primary js-scroll-trigger" style="margin-right:5px;">Who Are We</a><a class="btn btn-primary js-scroll-trigger">Book An Appointment</a>
       </div>
     </div>
   </header>
