Content added on about us page eg mission statement and meet our therapists button

--- a/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
@@ -54,25 +54,24 @@
   <!-- Header -->
 
   <header class="masthead" style="background:url(https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/image.jpg)">
-    <div class="container d-flex h-100 align-items-center" style="padding-top:150px;" >
+    <div class="container d-flex h-100 align-items-center" style="padding-top:100px;" >
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0" style="font-size:48px;">Who Are We</h1>
+        <h1 class="mx-auto my-0" style="font-size:48px;">About Us</h1>
         <div style="padding-top:10px">
-          <h3>The four pillars of Foreigners Therapy Group:</h3>
-          <h4 style="padding-top:10px;">Compassion</h4>
-          <p>We work with people not disorders . A diagnosis does not refer to a person.  We view all psychological sensitivities as human, common with everyone in varying degrees.</p>
-          <h4 style="padding-top:10px;">Trust: we provide expertise and knowledge you can trust</h4>
-          <p>All therapists are members of European associations of psychotherapy.  Most have post graduate training and some are in fact trainers themselves.  All adhere to strict ethical guidelines of their associations.
-            The level of expertise within the group is very high. </p>
-          <h4 style="padding-top:10px;">Convenience</h4>
-          <p>We are able to provide on line therapy through Skype and other video interfaces.  We are located in Prague, therefore face to face therapy is also possible after COVID restrictions are lifted.</p>
-          <h4 style="padding-top:10px;">Value</h4>
-          <p>The one to three sessions free monthly until the COVID restrictions are lifted.
-
-            We believe that the value of having a therapist with whom we can share a common cultural framework makes a difference in therapy.
-
-            Our therapists are either native mother tough speakers  or lived there long enough to have a common cultural connection. </p>
-          <p>(Minimum 5 years and training in the culture) </p>
+          <h3>Mission Statement</h3>
+          <h4 style="padding-top:10px;"><p>As a group of international psychotherapists who are based in the Czech Republic our
+mission is to reach out and connect with the global community. A community which we
+believe has not only many colourful cultures, histories and languages, but many
+individual needs, many unique stories that need a space to be expressed.</p></h4>
+    <h4 style="padding-top:10px;"> <p> We aim to offer just that, a space where you can find a psychotherapist who can speak
+freely in your language, and is either a native from the UK, USA, Germany and The
+Czech Republic, or who has spent time living outside their own native country. We
+understand that moving abroad and starting over in a new or old country can be a big
+adventure, but can also bring many unknowns. As a result we believe that the value of
+having a psychotherapist with whom we can share a common cultural framework has
+the possibility to make a difference in psychotherapy. </p> </h4>
+ <a class="btn btn-primary js-scroll-trigger" style="margin-right:5px;">Who Are We?</a><a class="btn btn-primary js-scroll-trigger">Meet Our Therapists</a>
+          
         </div>
       </div>
     </div>
