--- a/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
@@ -77,8 +77,56 @@ the possibility to make a difference in psychotherapy. </p> </h4>
     </div>
   </header>
 
-  <h2>Hello World</h2>
+<!-- Projects Section -->
+  <section id="projects" class="projects-section bg-light">
+    <div class="container">
 
+      <!-- Featured Project Row -->
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+        <div class="col-xl-12 col-lg-12" style="margin-top:15px;">
+          <img class="img-fluid mb-3 mb-lg-0" src="/untitled6/assets/images/compassion.png" alt="">
+        </div>
+        
+      </div>
+
+      <!-- Project One Row -->
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-12">
+          <img class="img-fluid" src="/untitled6/assets/images/compassiontext.png" alt="">
+        </div>
+        <div class="col-lg-6">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">Misty</h4>
+                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project Two Row -->
+      <div class="row justify-content-center no-gutters">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+        </div>
+        <div class="col-lg-6 order-lg-first">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-right">
+                <h4 class="text-white">Mountains</h4>
+                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <hr class="d-none d-lg-block mb-0 mr-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
