--- a/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
@@ -92,10 +92,10 @@ the possibility to make a difference in psychotherapy. </p> </h4>
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="/untitled6/assets/images/compassiontext.png" alt="">
+          <img class="img-fluid" src="https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/compassiontext.png" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
-              <img class="img-fluid" src="/untitled6/assets/images/qualityexpertise.png" alt="">
+              <img class="img-fluid" src="https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/qualityexpertise.png" alt="">
 
         </div>
         
@@ -104,7 +104,7 @@ the possibility to make a difference in psychotherapy. </p> </h4>
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-12">
-          <img class="img-fluid" src="/untitled6/assets/images/qualityexpertise.png" alt="">
+          <img class="img-fluid" src="https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/qualityexpertise.png" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
