--- a/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
@@ -84,7 +84,7 @@ the possibility to make a difference in psychotherapy. </p> </h4>
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-12 col-lg-12" style="margin-top:15px;">
-          <img class="img-fluid mb-3 mb-lg-0" src="/untitled6/assets/images/compassion.png" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="https://nafeesahyounis.github.io/foreigntherapistsgroup//untitled6/assets/images/compassion.png" alt="">
         </div>
         
       </div>
