What do we offer banner added

--- a/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
@@ -81,6 +81,13 @@ the possibility to make a difference in psychotherapy. </p> </h4>
   <section id="projects" class="projects-section bg-light">
     <div class="container">
 
+    <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+        <div class="col-xl-12 col-lg-12" style="margin-top:15px;">
+          <img class="img-fluid mb-3 mb-lg-0" src="https://nafeesahyounis.github.io/foreigntherapistsgroup//untitled6/assets/images/whatdoweoffertext.png" alt="">
+        </div>
+        
+      </div>
+
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-12 col-lg-12" style="margin-top:15px;">
