--- a/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
@@ -17,7 +17,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="css/grayscale.min.css" rel="stylesheet">
 
@@ -85,10 +85,23 @@ the possibility to make a difference in psychotherapy. </p> </h4>
         
 
 
-        <div class="col-xl-6 col-lg-6" style="margin-top:15px;">
-          <img class="img-fluid mb-3 mb-lg-0" src="https://nafeesahyounis.github.io/foreigntherapistsgroup//untitled6/assets/images/whoarewe2.png" alt="">
+        <div class="col-xl-12 col-lg-12" style="margin-top:15px;">
+          <img class="img-fluid mb-3 mb-lg-0" src="https://nafeesahyounis.github.io/foreigntherapistsgroup//untitled6/assets/images/whoareweheader.png" alt="">
         </div>
-        
+    <div class="col-xl-12 col-lg-12">
+
+<h3 style="font-family: 'Lora', serif;" style="background-color:white;"><p>We are all
+qualified registered professionals working in various branches of psychotherapy, who
+are all members of professional organisations either here in the Czech Republic, or in
+our respective countries of origin. We all adhere to the guidelines of ČAP, and EAP the
+European Association of Psychotherapy.</p></h3>
+<h3 style="font-family: 'Lora', serif;" style="background-color:white;"><p>Our therapists are either native mother tongue speakers or have lived long enough in
+another country (minimum 5 years), plus training and experience in the specific country
+in order to have a common cultural connection.</p></h3> 
+
+    <div>
+
+
       </div>
 
       <!-- Featured Project Row -->
