text centered on headers for who are we

--- a/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
@@ -90,12 +90,12 @@ the possibility to make a difference in psychotherapy. </p> </h4>
         </div>
     <div class="col-xl-12 col-lg-12">
 
-<h3 style="font-family: 'Lora', serif;" style="background-color:white;"><p>We are all
+<h3 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>We are all
 qualified registered professionals working in various branches of psychotherapy, who
 are all members of professional organisations either here in the Czech Republic, or in
 our respective countries of origin. We all adhere to the guidelines of ČAP, and EAP the
 European Association of Psychotherapy.</p></h3>
-<h3 style="font-family: 'Lora', serif;" style="background-color:white;"><p>Our therapists are either native mother tongue speakers or have lived long enough in
+<h3 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>Our therapists are either native mother tongue speakers or have lived long enough in
 another country (minimum 5 years), plus training and experience in the specific country
 in order to have a common cultural connection.</p></h3> 
 
