What do we offer section header and text added

--- a/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
@@ -90,14 +90,22 @@ the possibility to make a difference in psychotherapy. </p> </h4>
         </div>
     <div class="col-xl-12 col-lg-12">
 
-<h3 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>We are all
+<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>We are all
 qualified registered professionals working in various branches of psychotherapy, who
 are all members of professional organisations either here in the Czech Republic, or in
 our respective countries of origin. We all adhere to the guidelines of ČAP, and EAP the
-European Association of Psychotherapy.</p></h3>
-<h3 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>Our therapists are either native mother tongue speakers or have lived long enough in
+European Association of Psychotherapy.</p></h4>
+<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>Our therapists are either native mother tongue speakers or have lived long enough in
 another country (minimum 5 years), plus training and experience in the specific country
-in order to have a common cultural connection.</p></h3> 
+in order to have a common cultural connection.</p></h4> 
+<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>Languages offered in native tongue English, German, Czech. Plus French and Italian as a
+second language.</p></h4>
+<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>For more information take a look through our list of psychotherapists: </p></h4>
+<h4  class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>Andrea Nundy-Mala (English)</p><h4>
+<h4  class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>Katja Křížková (English and Czech)</p><h4>
+<h4  class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>Beate Albrich (German, Czech and English)</p><h4>
+<h4  class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>Willi Rös (German and French)</p><h4>
+
 
     <div>
 
@@ -105,6 +113,18 @@ in order to have a common cultural connection.</p></h3>
       </div>
 
       <!-- Featured Project Row -->
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+        <div class="col-xl-12 col-lg-12" style="margin-top:15px;">
+          <img class="img-fluid mb-3 mb-lg-0" src="https://nafeesahyounis.github.io/foreigntherapistsgroup//untitled6/assets/images/whatdoweofferheader.png" alt="">
+        </div>
+      <div>
+      <h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>In the current reality of the Coronavirus pandemic and restrictions placed on us we
+recognise the need to reach out and offer our professional support to those who are
+feeling isolated and worried. We have devised a free of charge online therapy /
+telehealth service as a way to connect to those who are struggling with feelings brought
+up during this time of global crisis. </p></h4>
+    </div>
+      </div>
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-12 col-lg-12" style="margin-top:15px;">
           <img class="img-fluid mb-3 mb-lg-0" src="https://nafeesahyounis.github.io/foreigntherapistsgroup//untitled6/assets/images/compassion.png" alt="">
