--- a/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
@@ -142,7 +142,7 @@ up during this time of global crisis. </p></h4>
         </div>
       </div>
 <div class="card-deck container row">
-  <div class="card col-lg-4 col-xl-4 col-md-6" style="background-color:#3FBFBF;">
+  <div class="card col-lg-4 col-xl-4 col-md-6">
     <div class="card-body">
       <h5 class="card-title">A Compassionate Perspective</h5>
       <p class="card-text">We work with people, not disorders. A diagnosis does not refer to a person. We view all psychological sensitivities as human, which can exist on some level in everyone at different times throughout life’s journey.</p>
@@ -173,6 +173,35 @@ after COVID restrictions are lifted.</p>
   </div>
 </div>
 
+<!-- Featured Project Row -->
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+        <div class="col-xl-12 col-lg-12" style="margin-top:15px;">
+          <img class="img-fluid mb-3 mb-lg-0" src="https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/howdoesitwork.png" alt="">
+        </div>
+      <div>
+      <h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>The impact of significant changes to our regular way of life will have an influence on our
+well being, both physically and psychologically. The terms such as lockdown,
+restrictions, and quarantine which we are hearing, moreover experiencing daily, can
+trigger a number of responses. If you are experiencing:</p></h4>
+<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> Increased Anxiety </p></h4>
+<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> Depression </p></h4>
+<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> Feelings of isolation or loneliness </p></h4>
+<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> Sense of chaos or disorganisation</p></h4>
+<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> You can contact a psychotherapist directly through their contact email who will reply
+with a time for an appointment.</p></h4>
+<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> You can have between 1-3 sessions of 45 minutes free of charge after this time it will be
+payable, this is discussed with the psychotherapist directly.</p></h4>
+<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> This service is due to the current Coronavirus pandemic so it will be in operation until
+further notice.</p></h4>
+<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> What we do not offer:</p></h4>
+<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> We understand that many people are in extreme situations, with more extreme, or
+overwhelming feelings. We are however not a Crisis Intervention team. We do not deal
+with immediate crises, there are plenty of expert crisis lines you can contact for this.</p></h4>
+
+
+    </div>
+      </div>
+      
       
       </div>
 
