Font changed and made to look neater

--- a/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
@@ -90,21 +90,21 @@ the possibility to make a difference in psychotherapy. </p> </h4>
         </div>
     <div class="col-xl-12 col-lg-12">
 
-<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>We are all
+<h4 class="text-center"><p>We are all
 qualified registered professionals working in various branches of psychotherapy, who
 are all members of professional organisations either here in the Czech Republic, or in
 our respective countries of origin. We all adhere to the guidelines of ČAP, and EAP the
 European Association of Psychotherapy.</p></h4>
-<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>Our therapists are either native mother tongue speakers or have lived long enough in
+<h4 class="text-center"><p>Our therapists are either native mother tongue speakers or have lived long enough in
 another country (minimum 5 years), plus training and experience in the specific country
 in order to have a common cultural connection.</p></h4> 
 <h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>Languages offered in native tongue English, German, Czech. Plus French and Italian as a
 second language.</p></h4>
-<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>For more information take a look through our list of psychotherapists: </p></h4>
-<h4  class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>Andrea Nundy-Mala (English)</p><h4>
-<h4  class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>Katja Křížková (English and Czech)</p><h4>
-<h4  class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>Beate Albrich (German, Czech and English)</p><h4>
-<h4  class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>Willi Rös (German and French)</p><h4>
+<h4 class="text-center"><p>For more information take a look through our list of psychotherapists: </p></h4>
+<h4  class="text-center" ><p>Andrea Nundy-Mala (English)</p><h4>
+<h4  class="text-center"><p>Katja Křížková (English and Czech)</p><h4>
+<h4  class="text-center"><p>Beate Albrich (German, Czech and English)</p><h4>
+<h4  class="text-center"><p>Willi Rös (German and French)</p><h4>
 
 
     <div>
@@ -118,7 +118,7 @@ second language.</p></h4>
           <img class="img-fluid mb-3 mb-lg-0" src="https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/whatdoweofferheader.png" alt="">
         </div>
       <div>
-      <h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>In the current reality of the Coronavirus pandemic and restrictions placed on us we
+      <h4 class="text-center"><p>In the current reality of the Coronavirus pandemic and restrictions placed on us we
 recognise the need to reach out and offer our professional support to those who are
 feeling isolated and worried. We have devised a free of charge online therapy /
 telehealth service as a way to connect to those who are struggling with feelings brought
@@ -179,22 +179,22 @@ after COVID restrictions are lifted.</p>
           <img class="img-fluid mb-3 mb-lg-0" src="https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/howdoesitwork.png" alt="">
         </div>
       <div>
-      <h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p>The impact of significant changes to our regular way of life will have an influence on our
+      <h4 class="text-center" style="padding-top:10px;"><p>The impact of significant changes to our regular way of life will have an influence on our
 well being, both physically and psychologically. The terms such as lockdown,
 restrictions, and quarantine which we are hearing, moreover experiencing daily, can
 trigger a number of responses. If you are experiencing:</p></h4>
-<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> Increased Anxiety </p></h4>
-<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> Depression </p></h4>
-<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> Feelings of isolation or loneliness </p></h4>
-<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> Sense of chaos or disorganisation</p></h4>
-<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> You can contact a psychotherapist directly through their contact email who will reply
+<h4 class="text-center" ><p> Increased Anxiety </p></h4>
+<h4 class="text-center" ><p> Depression </p></h4>
+<h4 class="text-center" ><p> Feelings of isolation or loneliness </p></h4>
+<h4 class="text-center" ><p> Sense of chaos or disorganisation</p></h4>
+<h4 class="text-center" ><p> You can contact a psychotherapist directly through their contact email who will reply
 with a time for an appointment.</p></h4>
-<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> You can have between 1-3 sessions of 45 minutes free of charge after this time it will be
+<h4 class="text-center" ><p> You can have between 1-3 sessions of 45 minutes free of charge after this time it will be
 payable, this is discussed with the psychotherapist directly.</p></h4>
-<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> This service is due to the current Coronavirus pandemic so it will be in operation until
+<h4 class="text-center" ><p> This service is due to the current Coronavirus pandemic so it will be in operation until
 further notice.</p></h4>
-<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> What we do not offer:</p></h4>
-<h4 class="text-center" style="font-family: 'Lora', serif;" style="background-color:white;"><p> We understand that many people are in extreme situations, with more extreme, or
+<h4 class="text-center" ><p> What we do not offer:</p></h4>
+<h4 class="text-center" ><p> We understand that many people are in extreme situations, with more extreme, or
 overwhelming feelings. We are however not a Crisis Intervention team. We do not deal
 with immediate crises, there are plenty of expert crisis lines you can contact for this.</p></h4>
 
