colors for what do we offer changed and made more harmonious

--- a/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
@@ -25,6 +25,7 @@
 
   .whatdoweoffer{
     background-color:#A78EA3;
+    color:#344B47;
   }
 
   .whatdoweoffertitle{
@@ -100,8 +101,8 @@ the possibility to make a difference in psychotherapy. </p> </h4>
 
 
         <div class="col-xl-12 col-lg-12" style="margin-top:15px;">
-          <img class="img-fluid mb-3 mb-lg-0" src="https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/whoareweheader.png" alt="">
-        </div>
+<h1 class="whatdoweoffertitle"> Who Are We?        </h1>
+</div>
     <div class="col-xl-12 col-lg-12">
 
 <h4 class="text-center"><p>We are all
@@ -133,7 +134,7 @@ second language.</p></h4>
         <h1 class="whatdoweoffertitle"> What Do We Offer? </h1>
         </div>
       <div>
-      <h4 class="text-center"><p>In the current reality of the Coronavirus pandemic and restrictions placed on us we
+      <h4 class="text-center mt-4"><p>In the current reality of the Coronavirus pandemic and restrictions placed on us we
 recognise the need to reach out and offer our professional support to those who are
 feeling isolated and worried. We have devised a free of charge online therapy /
 telehealth service as a way to connect to those who are struggling with feelings brought
@@ -157,12 +158,12 @@ up during this time of global crisis. </p></h4>
          
 <div class="container">
 <div class="row">
-  <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+  <div class="col-12 col-lg-4 col-md-6 col-sm-12 compassion" style="background-color:#759D96;">
       <h5 class="card-title">A Compassionate Perspective</h5>
       <p class="card-text">We work with people, not disorders. A diagnosis does not refer to a person. We view all psychological sensitivities as human, which can exist on some level in everyone at different times throughout life’s journey.</p>
   </div>
   
-  <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+  <div class="col-12 col-lg-4 col-md-6 col-sm-12 convenience" style="background-color:#735B6F;">
     <div class="card-body">
       <h5 class="card-title">Convenient Online Support</h5>
       <p class="card-text">We are able to provide online therapy through
@@ -172,7 +173,7 @@ in the world. We are located in Prague, therefore face to face therapy is also p
 after COVID restrictions are lifted.</p>
     </div>
   </div>
-  <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+  <div class="col-12 col-lg-4 col-md-6 col-sm-12 quality" style="background-color:#344B47;">
     <div class="card-body">
       <h5 class="card-title">Quality Expertise</h5>
       <p class="card-text">All psychotherapists are members of European associations of
