--- a/untitled6/startbootstrap-grayscale-gh-pages 4/meetthetherapists.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/meetthetherapists.html
@@ -51,14 +51,37 @@ height: 10em;
 
   }
 .katjaimage{
-     background: url(https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/katja.JPG) no-repeat center center fixed;
-            background-size:cover;
-      -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+     background: url(https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/katja.JPG) no-repeat;
+            background-size:contain;
+      -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain;
     width:100%;
     overflow:hidden;
+    height:100vh;
+}
+
+.katja{
+          height:100vh;
+
+}
+
+.andrea{
+    height:100vh;
+}
+
+.andreaimage{
+    background: url(https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/andrea.JPG) no-repeat;
+            background-size:contain;
+      -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain;
+    width:100%;
+    overflow:hidden;
+    height:100vh;
+
 }
 
   
@@ -126,8 +149,8 @@ height: 10em;
   </section> 
 
   <section>
-  <div class="container">
-  <div class="row">
+  <div class="container-fluid katja" style="padding-top:100px;">
+  <div class="row no-gutters mb-4 mb-lg-5">
   <div class="col-12 col-lg-6 col-md-6 col-sm-12 image">
   <h2> Katja Krizkova </h2>
   </div>
@@ -138,8 +161,21 @@ height: 10em;
   </div>
   </section>
 
+  <section>
+  <div class="container-fluid andrea" style="padding-top:100px;">
+  <div class="row no-gutters mb-4 mb-lg-5">
+  <div class="col-12 col-lg-6 col-md-6 col-sm-12 andreaimage">
 
+    </div>
+  <div class="col-12 col-lg-6 col-md-6 col-sm-12 image">
+  <h2> Andrea Malá </h2>
+  </div>
+    
+  </div>
+  </div>
   </section>
+
+
 
   
 
