padding added to how does it work

--- a/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
@@ -280,7 +280,7 @@ and non verbal psychotherapy. Many of the psychotherapists are trainers themselv
       <div class="container d-flex align-items-center">
 
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-        <div class="col-xl-12 col-lg-12" style="margin-top:15px;">
+        <div class="col-xl-12 col-lg-12 mt-4" style="margin-top:15px;">
         <h1> How Does It Work?</h1>
         </div>
       <div>
