andrea added and sizing worked out on tablet and phone

--- a/untitled6/startbootstrap-grayscale-gh-pages 4/meetthetherapists.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/meetthetherapists.html
@@ -38,6 +38,12 @@ height: 10em;
   -webkit-background-clip: text;   
   }
 
+  .andrea{
+      background-color:#A78EA3;
+      color:white;
+
+  }
+
   .header{
       height:100vh;
             background: url(https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/meetteam.jpg) no-repeat center center fixed;
@@ -59,17 +65,46 @@ height: 10em;
     background-size: contain;
     width:100%;
     overflow:hidden;
-    height:100vh;
+    height:600px;
 }
 
-.katja{
-          height:100vh;
+/*for phones */
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+      .katjaimage{
+          padding-top:60vh;
+      }
+.headertitle{
+    font-size:32px;
+}
+
+.image {
+
+    font-size:16px;
+}
+  
+.andreaimage{
+          height:300px;
+      }
 
 }
 
-.andrea{
-    height:100vh;
-}
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+      .headertitle{
+          font-size:50px;
+      }
+
+  }
+
+
 
 .andreaimage{
     background: url(https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/andrea.JPG) no-repeat;
@@ -80,7 +115,7 @@ height: 10em;
     background-size: contain;
     width:100%;
     overflow:hidden;
-    height:100vh;
+    height:600px;
 
 }
 
@@ -149,10 +184,21 @@ height: 10em;
   </section> 
 
   <section>
-  <div class="container-fluid katja" style="padding-top:100px;">
+  <div class="container katja align-items-center mt-4">
   <div class="row no-gutters mb-4 mb-lg-5">
-  <div class="col-12 col-lg-6 col-md-6 col-sm-12 image">
+  <div class="col-12 col-lg-6 col-md-6 col-sm-12 image mt-4">
   <h2> Katja Krizkova </h2>
+  <p class="image"> Katja Křížková has a degree in Psychology from the University of George Mason in
+Virginia and is a certified Integrative Psychotherapist, and is registered with EAIP. She is
+currently enrolled in a gestalt post graduate course which she will complete in 2022.
+Her additional training includes Crisis intervention, Dream work, and Trauma therapy
+among others.  </p>
+
+<p class="image"> She is part of a working group for ČAP (Czech association of
+psychotherapy). She has cross cultural experience as a TCK having lived in Africa (5
+years), the United States (17 years), Asia (4 years) and Europe (26 years). She has been
+practicing joga for the past fifteen years. She is fluent in English and Czech, and
+understands Slovak at an advanced level.  </p>
   </div>
     <div class="col-12 col-lg-6 col-md-6 col-sm-12 katjaimage">
 
@@ -161,14 +207,39 @@ height: 10em;
   </div>
   </section>
 
-  <section>
-  <div class="container-fluid andrea" style="padding-top:100px;">
+  <section class="andrea">
+  <div class="container-fluid align-items-center mt-4">
   <div class="row no-gutters mb-4 mb-lg-5">
-  <div class="col-12 col-lg-6 col-md-6 col-sm-12 andreaimage">
+  <div class="col-12 col-lg-6 col-md-6 col-sm-12 andreaimage mt-4">
 
     </div>
-  <div class="col-12 col-lg-6 col-md-6 col-sm-12 image">
+  <div class="col-12 col-lg-6 col-md-6 col-sm-12 image mt-4">
   <h2> Andrea Malá </h2>
+  <p> B.A (Hons), PG.Dip, M.A RDMP UK, CAP is originally from London
+a native English speaker, she has been living in the Czech Republic for the last 12 years.
+A qualified movement psychotherapist registered with ADMP UK and a verbal
+psychotherapist registered with the Czech Association of Psychotherapy. 18 years of
+clinical experience with a range of clients from those in everyday need with difficult life
+problems to people with additions, depression and trauma. 12 years of teaching in the
+field of movement psychotherapy across Europe, with a specialisation in developmental
+psychotherapy in relation to the body and movement. </p>
+<p> Andrea is a teacher on training
+programs in Croatia and Romania and runs a training program in Prague. She is in
+private practice, and works as a psychotherapist for Unicare, a private healthcare clinic
+that specialises in psychosomatic medicine with a focus on foreigners who have
+relocated. </p>
+<p> Specializations </p>
+<ul>
+<li> Expatriates and the re-location of one’s self into a new country </li>
+<li> Psychosomatic issues </li>
+<li> Difficult Life Situations </li>
+<li> Depression Anxiety </li>
+<li> Recovery from Domestic Abuse </li>
+<li> Trauma </li>
+<li> Identity </li>
+<li> Personal Development </li>
+<p> Contact: maladmp@gmail.com </p>
+<p> www.dancetherapy.cz </p> 
   </div>
     
   </div>
