--- a/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
@@ -23,6 +23,26 @@
 
   <style>
 
+  @media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+      .headertitle{
+          font-size:50px;
+      }
+
+  }
+
+  @media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+      .headertitle{
+          font-size:32px;
+      }
+  }
   .headertitle{
 height: 10em;
   display: flex;
