font color changed

--- a/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/about.html
@@ -54,7 +54,8 @@ height: 10em;
   line-height: 2.5rem;
   letter-spacing: 0.8rem;
   background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
-  -webkit-text-fill-color: black;
+  -webkit-text-fill-color:#F7F3EF;
+;
   -webkit-background-clip: text;   
   }
 
@@ -81,7 +82,8 @@ height: 10em;
 
   .whoarewe{
       background-color:#7091a1;
-      color:white;
+      color:#F7F3EF;
+;
   }
 
   .whatdoweoffer{
@@ -98,7 +100,7 @@ height: 10em;
 
   .howdoesitwork{
       background-color:#7091a1;
-      color:white;
+    color:#F7F3EF;
   }
 
   .whatdoweoffertitle{
