--- a/untitled6/startbootstrap-grayscale-gh-pages 4/meetthetherapists.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/meetthetherapists.html
@@ -34,7 +34,8 @@ height: 10em;
   line-height: 2.5rem;
   letter-spacing: 0.8rem;
   background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
-  -webkit-text-fill-color: black;
+  -webkit-text-fill-color: #F7F3EF;
+
   -webkit-background-clip: text;   
   }
 
