--- a/untitled6/startbootstrap-grayscale-gh-pages 4/meetthetherapists.html
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/meetthetherapists.html
@@ -41,7 +41,7 @@ height: 10em;
 
   .andrea{
       background-color:#A78EA3;
-      color:white;
+    color:#F7F3EF;
 
   }
 
@@ -118,6 +118,18 @@ height: 10em;
     overflow:hidden;
     height:600px;
 
+}
+
+.beateimage{
+    background: url(https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/beate.JPG) no-repeat;
+            background-size:contain;
+      -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain;
+    width:100%;
+    overflow:hidden;
+    height:600px;
 }
 
   
@@ -243,6 +255,29 @@ relocated. </p>
 <p> www.dancetherapy.cz </p> 
   </div>
     
+  </div>
+  </div>
+  </section>
+
+  <section>
+  <div class="container beate align-items-center mt-4">
+  <div class="row no-gutters mb-4 mb-lg-5">
+  <div class="col-12 col-lg-6 col-md-6 col-sm-12 image mt-4">
+  <h2> Dipl. KT Beate Albrich  </h2>
+  <p class="image"> Psychotherapist and Art therapist Person Centred Approach, mentoring Supervisor
+(EASC), head of the Czech Association for Art therapy (ČAA), foreign delegate of the
+Czech Association for Psychotherapy (ČAP) and the Czech Institute for Supervision (ČIS).
+Her native language is German, she graduated in Germany, lived in Romania,
+Italy,Germany and for many years in Prague Czech Republic.
+She works mainly in German, English and Czech.  </p>
+
+<p class="image"> Beate Specialises in individual and group psychotherapy, crises, mental health
+disorders, psychosomatics and improvement of quality of life.
+http://www.dadaextraart.cz/  </p>
+  </div>
+    <div class="col-12 col-lg-6 col-md-6 col-sm-12 beateimage">
+
+    </div>
   </div>
   </div>
   </section>
