navbar links added

--- a/about.html
+++ b/about.html
@@ -136,7 +136,10 @@ font-size: 2.5rem;
             <a class="nav-link js-scroll-trigger" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="about.html">Who Are We</a>
+            <a class="nav-link js-scroll-trigger" href="about.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="meetthetherapists.html">Meet the Therapists</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Book An Appointment</a>
@@ -189,7 +192,7 @@ understand that moving abroad and starting over in a new or old country can be a
 adventure, but can also bring many unknowns. As a result we believe that the value of
 having a psychotherapist with whom we can share a common cultural framework has
 the possibility to make a difference in psychotherapy. </p> </h4>
- <a class="btn btn-primary js-scroll-trigger" style="margin-right:5px;">Who Are We?</a><a class="btn btn-primary" href="https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/startbootstrap-grayscale-gh-pages%204/meetthetherapists.html">Meet Our Therapists</a>
+ <a class="btn btn-primary js-scroll-trigger" style="margin-right:5px;">Who Are We?</a><a class="btn btn-primary" href="meetthetherapists.html">Meet Our Therapists</a>
           
 
         </div>
