--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
             <a class="nav-link js-scroll-trigger" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="about.html">Who Are We</a>
+            <a class="nav-link js-scroll-trigger" href="about.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="meetthetherapists.html">Meet the Therapists</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Book An Appointment</a>
